# option-implied-distribution

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
notebooks/: 01_exploring_yfinance_data.ipynb  02_volatility_smile.ipynb  03_visualize_smile.ipynb  04_volatility_sruface.ipynb  05_analyze_interpolation.ipynb  exploring_yahoo_option_chain.ipynb
notebooks/case_studies/: AAPL_interpolation_vs_svi.ipynb  SPY_interpolation_vs_svi.ipynb  TSLA_interpolation_vs_svi.ipynb
notebooks/research/: 07_density_experiment02.ipynb
research/: 06_density_experiment01.ipynb  08_svi_validation.ipynb
src/optionanalytics/: __init__.py
src/optionanalytics/cleaning/: arbitrage.py  filters.py
src/optionanalytics/data/: yahoo.py
src/optionanalytics/density/: risk_neutral.py
src/optionanalytics/models/: density.py  enums.py  market.py  option.py  svi.py  volatility.py
src/optionanalytics/pricing/: black_scholes.py  implied_volatility.py  normal.py
src/optionanalytics/utils/: dates.py
src/optionanalytics/volatility/: interpolation.py  smile.py  surface.py  svi.py
tests/cleaning/: test_filters.py
tests/data/: test_yahoo.py
tests/density/: test_risk_neutral.py
tests/models/: test_market.py  test_option.py
tests/pricing/: test_black_scholes.py  test_implied_volatility.py
tests/volatility/: test_interplation.py  test_smile.py  test_surface.py  test_svi.py
