[project]
name = "option-implied-distribution"
version = "0.1.0"
description = "Option-Implied Risk-Neutral Distribution Analytics"
authors = [
    { name = "Rahul Krishna", email = "r.krishna.vedic@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.5.1,<3.0.0)",
    "scipy (>=1.18.0,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "plotly (>=6.9.0,<7.0.0)"
]

[tool.poetry]
packages = [
    { include = "optionanalytics", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "jupyterlab (>=4.6.1,<5.0.0)",
    "ipykernel (>=7.3.0,<8.0.0)",
    "yfinance (>=1.5.1,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "freezegun (>=1.5.5,<2.0.0)"
]
